--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,3 +157,48 @@ label {
     display: none;
   }
 }
+
+
+/* Dialog/Modal Style */
+
+.modal-shade {
+	width:100vw;
+	height:100vh;
+	background: rgba(0,0,0,.5);
+	position: fixed;
+	display:none;
+	z-index: 9;
+}
+
+.modal-window {
+	min-height: 100px;
+	max-height: 80vh;
+	overflow-y: auto;
+	min-width: 200px;
+	max-width: 80vw;
+	background: #fff;
+	word-wrap: break-word;
+	padding: 30px;
+	border-radius: 2px;
+	display:none;
+	position: fixed;
+	top: 50vh;
+	left: 50%;
+	transform: translate(-50%,-50%); 
+	box-shadow: 0px 0px 2px #111;
+	z-index: 10;
+}
+
+.close-modal {
+  position: absolute;
+  top: 0px;
+  right: 10px;
+  color: #555;
+  font-weight: 700;
+  cursor: pointer;
+  font-size: 26px;
+}
+
+.close-modal:hover {
+	color: #111;
+}
